--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -9,17 +9,18 @@ jobs:
         os: [ubuntu-latest] 
     steps:
       - uses: actions/checkout@v1.0.0
+
       - uses: azure/login@v1.1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Run Az CLI script
+
+      - name: Create Resource Group, Shared Image Gallery and Image Definition
         run: |
           az group create -l southcentralus -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           az group wait --created --resource-group "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
           az sig image-definition create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --gallery-name "sig${{ github.run_id }}${{ matrix.julia-version }}" --gallery-image-definition "unit-test-image" --publisher "canonical" --offer "0001-com-ubuntu-server-focal" --sku "20_04-lts" --os-type linux
-          az sig show  -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
-  
+
       - name: Template the Packer .j2 file
         uses: cuchi/jinja2-action@v1.2.0
         with:
@@ -34,10 +35,7 @@ jobs:
           JULIA_VERSION: "${{ matrix.julia-version }}"
           SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
           PUBLIC_IP: true
-
-      - name: Echo the contents of the templated file
-        run: |
-          cat /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+          BRANCH_NAME: "{{ github.ref }}"
 
       - name: Install Packer
         run: |
@@ -45,7 +43,7 @@ jobs:
           sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
           sudo apt-get update && sudo apt-get install packer
 
-      - name: packer build image
+      - name: Build Packer Image
         run: |
           packer build -color=false -force -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
         # can remove -force and should make each image name unique
@@ -72,7 +70,7 @@ jobs:
         with:
           file: lcov.info
 
-      # - name: Run Az CLI script
-      #   run: |
-      #     az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
-      #   if: ${{ always() }}
+      - name: Run Az CLI script
+        run: |
+          az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
+        if: ${{ always() }}
