removed infos ***NO_CI***

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -21,13 +21,6 @@ jobs:
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
           az sig image-definition create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --gallery-name "sig${{ github.run_id }}${{ matrix.julia-version }}" --gallery-image-definition "unit-test-image" --publisher "canonical" --offer "0001-com-ubuntu-server-focal" --sku "20_04-lts" --os-type linux
 
-      # - name: Grab Branch Name from 'github.ref'
-      #   uses: actions-ecosystem/action-regex-match@v2
-      #   id: branch-regex
-      #   with:
-      #     text: ${{ github.ref }}
-      #     regex: '.*\/(.*)'
-
       - name: Get the current branch name
         shell: bash
         run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
@@ -82,7 +75,7 @@ jobs:
         with:
           file: lcov.info
 
-      - name: Run Az CLI script
+      - name: Delete CI Resource Group
         run: |
           az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
         if: ${{ always() }}
