--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -51,7 +51,7 @@ jobs:
           JULIA_VERSION: "${{ matrix.julia-version }}"
           SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
           PUBLIC_IP: true
-          BRANCH_NAME: "${{ steps.myref.outputs.branch }}"
+          BRANCH_NAME: "${{ steps.myref.outputs.branch }}" #Not the branch, but the SHA
           SSH_PASS: "${{ secrets.SSH_PASSWORD }}"
 
       - name: Install Packer
