updated api version and printing json dict (added properties)

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           file: lcov.info
 
-      - name: Delete CI Resource Group
-        run: |
-          az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
-        if: ${{ always() }}
+      # - name: Delete CI Resource Group
+      #   run: |
+      #     az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
+      #   if: ${{ always() }}
