--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -92,9 +92,11 @@ jobs:
           
       - name: Run the unit tests
         run: |
-          sudo apt-get install jq
-          $pubipresp=$(az network public-ip show -g "ubuntu-latest-1.5-329937369" -n "master-testing-vm-ip")
-          $ipaddress=$(echo jq -r '.ipAddress' <<< "${pubipresp}" )
+          echo "about to start"
+          $pubipresp="$(az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip)"
+          echo "done 1"
+          $ipaddress="$(echo jq -r '.ipAddress' <<< \"${pubipresp}\" )"
+          echo "done 2"
           echo ${ipAddress}
         #ssh cvx@104.214.99.74 "julia -e 'using Pkg; pkg\"test AzManagers\"'"
 
