--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -93,6 +93,8 @@ jobs:
         run: |
           pubipresp=$(az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip)
           printf "az cli response: $pubipresp\n\n"
+          sed 's/***/{/g' $pubipresp
+          printf "az cli response: $pubipresp\n\n"
           ipaddress=$(echo $pubipresp | jq '.ipAddress')
           printf "ipAddress: >>> $ipAddress <<<\n\n"
           
