--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -91,9 +91,8 @@ jobs:
           
       - name: Run the unit tests
         run: |
-          echo az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip | jq '.ipAddress'
-        # >> api-resp.txt
-        # cat api-resp.txt
+          az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip | jq '.ipAddress' >> api-resp.txt
+          cat api-resp.txt
         # printf "az cli response: $pubipresp\n\n"
         # sed 's/***/{/g' $pubipresp
         # printf "az cli response: $pubipresp\n\n"
