--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -91,8 +91,8 @@ jobs:
           
       - name: Run the unit tests
         run: |
-          az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip | jq '.ipAddress' >> api-resp.txt
-          cat api-resp.txt
+          ipaddress=$(az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip | jq '.ipAddress')
+          echo "IP: $ipaddress"
         # printf "az cli response: $pubipresp\n\n"
         # sed 's/***/{/g' $pubipresp
         # printf "az cli response: $pubipresp\n\n"
