--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -91,7 +91,7 @@ jobs:
           
       - name: Run the unit tests
         run: |
-          ipaddress=$(az network public-ip show -g ubuntu-latest-1.5-329937369 -n master-testing-vm-ip | jq '.ipAddress')
+          ipaddress=$(az network public-ip show -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-pubip" | jq '.ipAddress' | cut -d "\"" -f 2)
           echo "IP: $ipaddress"
           ssh cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
 
