--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -18,76 +18,87 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Create Resource Group, Shared Image Gallery and Image Definition
-        run: |
-          az group create -l southcentralus -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
-          az group wait --created --resource-group "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
-          az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
-          az sig image-definition create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --gallery-name "sig${{ github.run_id }}${{ matrix.julia-version }}" --gallery-image-definition "unit-test-image" --publisher "canonical" --offer "0001-com-ubuntu-server-focal" --sku "20_04-lts" --os-type linux
+      # - name: Create Resource Group, Shared Image Gallery and Image Definition
+      #   run: |
+      #     az group create -l southcentralus -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+      #     az group wait --created --resource-group "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+      #     az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
+      #     az sig image-definition create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --gallery-name "sig${{ github.run_id }}${{ matrix.julia-version }}" --gallery-image-definition "unit-test-image" --publisher "canonical" --offer "0001-com-ubuntu-server-focal" --sku "20_04-lts" --os-type linux
 
-        # also need to redirect stdout to github actions (might be able to do in julia) (mby write stdout to file and scp file and cat in githib actions?)
-        # back pulic ip changes out of azmanagers
+      #   # also need to redirect stdout to github actions (might be able to do in julia) (mby write stdout to file and scp file and cat in githib actions?)
+      #   # back pulic ip changes out of azmanagers
 
-      - name: Get the current branch name
-        shell: bash
-        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
-        id: myref
+      # - name: Get the current branch name
+      #   shell: bash
+      #   run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+      #   id: myref
 
-      - name: Template the Packer .j2 file
-        uses: cuchi/jinja2-action@v1.2.0
-        with:
-          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
-          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
-        env:
-          SUBSCRIPTION_ID: "${{ secrets.SUBSCRIPTION_ID }}"
-          TENANT_ID: "${{ secrets.TENANT_ID }}" 
-          CLIENT_ID: "${{ secrets.CLIENT_ID }}"
-          CLIENT_SECRET: "${{ secrets.CLIENT_SECRET }}"
-          RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
-          JULIA_VERSION: "${{ matrix.julia-version }}"
-          SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
-          PUBLIC_IP: true
-          BRANCH_NAME: "${{ steps.myref.outputs.branch }}" #Not the branch, but the SHA
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-          SS_TEMPLATE_JSON: ${{ secrets.SS_TEMPLATE_JSON_3 }}
-          IMAGE_NAME: "unit-test-image"
-
-
-      - name: Template the Packer .j2 file
-        uses: cuchi/jinja2-action@v1.2.0
-        with:
-          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl.j2
-          output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl
-        env:
-          RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
-          SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-          SUBSCRIPTION_ID: "${{ secrets.SUBSCRIPTION_ID }}"
-          TENANT_ID: "${{ secrets.TENANT_ID }}" 
-          CLIENT_ID: "${{ secrets.CLIENT_ID }}"
-          CLIENT_SECRET: "${{ secrets.CLIENT_SECRET }}"
+      # - name: Template the Packer .j2 file
+      #   uses: cuchi/jinja2-action@v1.2.0
+      #   with:
+      #     template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
+      #     output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+      #   env:
+      #     SUBSCRIPTION_ID: "${{ secrets.SUBSCRIPTION_ID }}"
+      #     TENANT_ID: "${{ secrets.TENANT_ID }}" 
+      #     CLIENT_ID: "${{ secrets.CLIENT_ID }}"
+      #     CLIENT_SECRET: "${{ secrets.CLIENT_SECRET }}"
+      #     RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+      #     JULIA_VERSION: "${{ matrix.julia-version }}"
+      #     SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
+      #     PUBLIC_IP: true
+      #     BRANCH_NAME: "${{ steps.myref.outputs.branch }}" #Not the branch, but the SHA
+      #     AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      #     SS_TEMPLATE_JSON: ${{ secrets.SS_TEMPLATE_JSON_3 }}
+      #     IMAGE_NAME: "unit-test-image"
 
 
-      - name: Install Packer
-        run: |
-          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-          sudo apt-get update && sudo apt-get install packer
+      # - name: Template the Packer .j2 file
+      #   uses: cuchi/jinja2-action@v1.2.0
+      #   with:
+      #     template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl.j2
+      #     output_file: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/azmanagers-setup.jl
+      #   env:
+      #     RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+      #     SIG_NAME: "sig${{ github.run_id }}${{ matrix.julia-version }}"
+      #     AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      #     SUBSCRIPTION_ID: "${{ secrets.SUBSCRIPTION_ID }}"
+      #     TENANT_ID: "${{ secrets.TENANT_ID }}" 
+      #     CLIENT_ID: "${{ secrets.CLIENT_ID }}"
+      #     CLIENT_SECRET: "${{ secrets.CLIENT_SECRET }}"
 
-      - name: Build Packer Image
-        run: |
-          packer build -color=false -force -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+
+      # - name: Install Packer
+      #   run: |
+      #     curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+      #     sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+      #     sudo apt-get update && sudo apt-get install packer
+
+      # - name: Build Packer Image
+      #   run: |
+      #     packer build -color=false -force -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
         # can remove -force and should make each image name unique
         # will need to make sure we are adding the correct branch of AzManagers to the image we want to test
 
+      # - name: Create VNet, Subnet and Master VM
+      #   run: |
+      #     az network vnet create -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vnet" -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --subnet-name "default"
+      #     az vm create -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vm" -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --image unit-test-image --public-ip-address "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-pubip" --subnet "default" --vnet-name "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
+
+      # - name: Run the unit tests
+      #   run: |
+      #     ipaddress=$(az network public-ip show -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-pubip" | jq '.ipAddress' | cut -d "\"" -f 2)
+      #     echo "IP: $ipaddress"
+      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
+      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
+      #     ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
       - name: Create VNet, Subnet and Master VM
         run: |
-          az network vnet create -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vnet" -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --subnet-name "default"
-          az vm create -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vm" -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --image unit-test-image --public-ip-address "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-pubip" --subnet "default" --vnet-name "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
+          az vm create -n "new-vm" -g "ubuntu-latest-1.5-342246641" --image unit-test-image --public-ip-address "new-pubip" --subnet "default" --vnet-name "ubuntu-latest-1.5-342246641-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
 
       - name: Run the unit tests
         run: |
-          ipaddress=$(az network public-ip show -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-pubip" | jq '.ipAddress' | cut -d "\"" -f 2)
+          ipaddress=$(az network public-ip show -g "ubuntu-latest-1.5-342246641" -n "new-pubip" | jq '.ipAddress' | cut -d "\"" -f 2)
           echo "IP: $ipaddress"
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
