--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -74,17 +74,8 @@ jobs:
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
           ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
-      # - name: Create VNet, Subnet and Master VM
-      #   run: |
-      #     az vm create -n "new-vm" -g "ubuntu-latest-1.5-342246641" --image "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}-image" --public-ip-address "new-pubip" --subnet "default" --vnet-name "ubuntu-latest-1.5-342246641-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
-
-      # - name: Run the unit tests
-      #   run: |
-      #     ipaddress=$(az network public-ip show -g "ubuntu-latest-1.5-342246641" -n "new-pubip" | jq '.ipAddress' | cut -d "\"" -f 2)
-      #     echo "IP: $ipaddress"
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
-      #     ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
+        # could use detach functionality from AzManagers here ^^^^^
+        # scp lcov file to this github actions vm
 
       # - uses: codecov/codecov-action@v1
       #   with:
